feat: add jenkins pipeline

--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -54,7 +54,7 @@ spec:
     spec:
       containers:
       - name: web
-        image: pedroryago/kube-news:v1
+        image: pedroryago/kube-news:{{TAG}}
         ports:
         - containerPort: 8080
         env:
@@ -79,5 +79,4 @@ spec:
   ports:
     - port: 80
       targetPort: 8080
-      nodePort: 30000
-  type: NodePort
+  type: LoadBalancer
