--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -51,14 +51,14 @@ spec:
     metadata:
       labels:
         app: web
-    annotations:
-      prometheus.io/scrape: "true"
-      prometheus.io/port: "8080"
-      prometheus.io/path: "/metrics"
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "8080"
+        prometheus.io/path: "/metrics"
     spec:
       containers:
       - name: web
-        image: pedroryago/kube-news:{{TAG}}
+        image: pedroryago/kube-news:v1
         ports:
         - containerPort: 8080
         env:
